--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@ body{
     display: grid;
     grid: 50px 20px 1fr 1fr / 1fr 3fr 1fr;
 }
+#wrapper2{
+    gap: 15px;
+    display: grid;
+    grid: 50px 20px 50px 1fr  / 1fr 3fr 1fr;
+    
+}
 
 header{
     grid-column: 1/4;
@@ -64,3 +70,40 @@ height: 100%;
     margin-right: 16px;
     font-size: 17px;
   }
+.filter{
+    grid-column: 1/4;
+}
+select{
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-left: 5px;
+    border-radius: 15px;
+    padding: 5px;
+  }
+.container{
+    grid-column: 1/4;
+    grid-row: 4/5;
+    display: flex;
+    flex-direction: row;
+  }
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+  }
+  
+  /* Add rounded corners to the top left and the top right corner of the image */
+  img {
+    border-radius: 5px 5px 0 0;
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  /* Add some padding inside the card container */
+  .boxcontainer {
+    padding: 2px 16px;
+  }
+  
