--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 #wrapper2{
     gap: 15px;
     display: grid;
-    grid: 50px 20px 50px 1fr  / 1fr 3fr 1fr;
+    grid: 50px 20px 50px  / 1fr 3fr 1fr;
     
 }
 
@@ -82,21 +82,29 @@ select{
   }
 .container{
     grid-column: 1/4;
-    grid-row: 4/5;
     display: flex;
     flex-direction: row;
+   justify-content: space-evenly;
+   flex-wrap: wrap;
+   align-content: space-between;
+   overflow: scroll;
+   padding: 15px;
   }
   .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px; /* 5px rounded corners */
+    height: 100px;
   }
   
   /* Add rounded corners to the top left and the top right corner of the image */
   img {
     border-radius: 5px 5px 0 0;
   }
-  
+    .fixed-size {
+        width: 300px;
+        height: 200px;
+  }
   /* On mouse-over, add a deeper shadow */
   .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -105,5 +113,6 @@ select{
   /* Add some padding inside the card container */
   .boxcontainer {
     padding: 2px 16px;
+    width: 300px;
+    
   }
-  
