--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
     gap: 15px;
     display: grid;
     grid: 50px 20px 1fr 1fr / 1fr 3fr 1fr;
-    overflow-y: hidden; /* Add the ability to scroll */
+    overflow-y: hidden;
 }
 #wrapper::-webkit-scrollbar {
   display: none;
@@ -22,6 +22,12 @@ body{
   gap: 15px;
   display: grid;
   grid: 50px 20px 1fr 1fr / 1fr 3fr 1fr;
+}
+#wrapper4{
+  gap: 15px;
+  display: grid;
+  grid-template-rows: 50px 20px 1fr 1fr ;
+  overflow: hidden;
 }
 .pad{
   margin: 15px;
@@ -101,6 +107,7 @@ select{
    align-content: space-between;
    overflow: scroll;
    padding: 15px;
+   box-sizing: border-box;
   }
   .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -141,4 +148,23 @@ select{
   }
   #email{
     width: 200px;
+  }
+  .cart{
+    position: relative;
+    top:-13px;
+  }
+  .shopcart{
+    grid-column: 1/4;
+    padding: 15px;
+  }
+  footer{
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+    background-color: whitesmoke;
+    border-radius: 5px;
+height: 100%;
+grid-column: 1/4;
+  }
+  .shopcart h1{
+ text-align: center;
+ vertical-align: text-bottom;
   }
