--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ body{
   display: grid;
   grid: 50px 20px 1fr 1fr / 1fr 3fr 1fr;
 }
+.logo {
+  width: 85px;
+  position: relative;
+  top:-15px;
+}
 #wrapper4{
   gap: 15px;
   display: grid;
