--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,21 @@ body{
 .pad{
   margin: 15px;
 }
+.padtext{
+  margin: 15px;
+  padding: 15px;
+}
+.padtext hej{
+color: #FF5733;
+}
+.pad img{
+  width: 100%;
+  overflow: hidden;
+}
+.pad p{
+  text-align: center;
+  color: gray;
+}
 header{
     grid-column: 1/4;
     padding: 5px;
@@ -173,3 +188,14 @@ grid-column: 1/4;
  text-align: center;
  vertical-align: text-bottom;
   }
+h1 {
+    font-family: "Instrument Serif", serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+h2{
+  font-family: "Instrument Serif", serif;
+  font-weight: 500;
+  font-style: normal;
+}
