--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
 
 p {
   font-family: "Geom", sans-serif;
-  font-optical-sizing: auto;
+  font-optical-sizing: none;
   font-weight: 400;
   font-style: normal;
 }
@@ -97,7 +97,7 @@ h1 a {
   position: relative;
   top: -33px;
   font-family: "Dancing Script", cursive;
-  font-optical-sizing: auto;
+  font-optical-sizing: none;
   font-weight: 700;
   font-style: normal;
   order: 1;
